[refactor]: solving encryption and decryption at login